--- a/opaque-constraints.cabal
+++ b/opaque-constraints.cabal
@@ -14,6 +14,7 @@ license-file:  LICENSE
 build-type:    Simple
 extra-source-files:
   README.md
+Tested-With: GHC ==8.6.5 || ==8.4.4 || ==8.2.2
 
 source-repository head
   type: git
