--- a/opaque-constraints.cabal
+++ b/opaque-constraints.cabal
@@ -14,7 +14,7 @@ license-file:  LICENSE
 build-type:    Simple
 extra-source-files:
   README.md
-Tested-With: GHC ==8.6.5 || ==8.4.4 || ==8.2.2
+Tested-With: GHC ==8.8.1 || ==8.6.5 || ==8.4.4 || ==8.2.2
 
 source-repository head
   type: git
@@ -26,7 +26,7 @@ library
   hs-source-dirs:
     src
   build-depends:
-      base >=4.7 && <5
-    , template-haskell
+      base >=4.8 && <5
+    , template-haskell >=2.12 && <2.15
   default-language: Haskell2010
   ghc-options: -Wall
